--- a/Netflix_data_analysis.ipynb
+++ b/Netflix_data_analysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNna7Wpds8vmJuLyjzqEyUY",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPvun01rySCi7Z8tCicag54",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
         },
         "id": "MGlfIL5DkOgw",
-        "outputId": "49e0ba48-7af1-42a1-ed2c-1f957a9f52e6"
+        "outputId": "42a76582-3087-4b60-a393-8b261015fdb8"
       },
       "outputs": [
         {
@@ -72,7 +73,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fe13f47a-7289-4afb-ae64-d5a7cad6e4e7\">\n",
+              "  <div id=\"df-a5e0b051-e132-466c-b304-ba8c0e1b0663\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -179,7 +180,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe13f47a-7289-4afb-ae64-d5a7cad6e4e7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a5e0b051-e132-466c-b304-ba8c0e1b0663')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -230,12 +231,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fe13f47a-7289-4afb-ae64-d5a7cad6e4e7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-a5e0b051-e132-466c-b304-ba8c0e1b0663 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fe13f47a-7289-4afb-ae64-d5a7cad6e4e7');\n",
+              "          const element = document.querySelector('#df-a5e0b051-e132-466c-b304-ba8c0e1b0663');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -258,18 +259,214 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "\n",
+        "#Loading our dataset\n",
         "netflix_df = pd.read_csv(\"netflix_data.csv\")\n",
         "\n",
         "#Checking the first five rows of our dataset\n",
         "#netflix_df.iloc[0:5]\n",
         "#netflix_df[0:5]\n",
         "netflix_df.head(5)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Filtering for movies\n",
+        "As we can see above, we have many types of Netfliw shows, for this study we are intersted in analyzing movies and their duration of watch."
+      ],
+      "metadata": {
+        "id": "Gj4fy1Uemh7y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "netflix_df_movies_only = netflix_df[netflix_df[\"type\"]==\"Movie\"] #Subseting the DataFrame for type \"Movie\"\n",
+        "\n",
+        "netflix_movies_col_subset = netflix_df_movies_only[['title', 'country','genre', 'release_year', 'duration']] #Selecting only the columns of interest\n",
+        "\n",
+        "netflix_movies_col_subset[0:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "id": "XiYYbpNQmg5o",
+        "outputId": "12841d47-070b-4a6e-970e-3cfd122e1042"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "   title        country          genre  release_year  duration\n",
+              "1   7:19         Mexico         Dramas          2016        93\n",
+              "2  23:59      Singapore  Horror Movies          2011        78\n",
+              "3      9  United States         Action          2009        80\n",
+              "4     21  United States         Dramas          2008       123\n",
+              "6    122          Egypt  Horror Movies          2019        95"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-30d095cc-6279-4610-894b-9bcde4764548\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>title</th>\n",
+              "      <th>country</th>\n",
+              "      <th>genre</th>\n",
+              "      <th>release_year</th>\n",
+              "      <th>duration</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>7:19</td>\n",
+              "      <td>Mexico</td>\n",
+              "      <td>Dramas</td>\n",
+              "      <td>2016</td>\n",
+              "      <td>93</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>23:59</td>\n",
+              "      <td>Singapore</td>\n",
+              "      <td>Horror Movies</td>\n",
+              "      <td>2011</td>\n",
+              "      <td>78</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>9</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Action</td>\n",
+              "      <td>2009</td>\n",
+              "      <td>80</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>21</td>\n",
+              "      <td>United States</td>\n",
+              "      <td>Dramas</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>123</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>122</td>\n",
+              "      <td>Egypt</td>\n",
+              "      <td>Horror Movies</td>\n",
+              "      <td>2019</td>\n",
+              "      <td>95</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-30d095cc-6279-4610-894b-9bcde4764548')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-30d095cc-6279-4610-894b-9bcde4764548 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-30d095cc-6279-4610-894b-9bcde4764548');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
       ]
     }
   ]
