--- a/Netflix_data_analysis.ipynb
+++ b/Netflix_data_analysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN0HmzdO1rGVk5IcknuEqni",
+      "authorship_tag": "ABX9TyNQ5SI/HB/aTqtx3OVzk0ha",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,6 +946,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can notice that a non-typical genres such as children's movies and documentaries are all clustered around the bottom half of the plot. But we can't know for certain until we perform additional analyses."
+      ],
+      "metadata": {
+        "id": "_ZRzfqqOsAdX"
+      }
     }
   ]
 }
